# rss_reader_flask_app

./: .flaskenv  README.md  pyproject.toml
src/flaskhtmltailwind/: __init__.py
src/flaskhtmltailwind/templates/: base.html  feed.html
src/flaskhtmltailwind/templates/partials/: entry.html  entry_page.html
